Fixing styling in CSS, increase readability of text + fix columns

--- a/Task-Tracker/src/app/task-page/task-page.component.css
+++ b/Task-Tracker/src/app/task-page/task-page.component.css
@@ -1,3 +1,5 @@
 .fieldColor {
     border: 2px solid darkgray;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
