--- a/Task-Tracker/src/styles.css
+++ b/Task-Tracker/src/styles.css
@@ -18,6 +18,7 @@ body {
 
 .whiteTextBody {
     color: rgba(255, 255, 255, 0.6);
+    padding-left: 5px;
 }
 
 .fieldColor {
